src/objects/CMSContentSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings to be configured by the CMS implementator for object Content.</description>
    <fields>
        <fullName>ContentLandingColumnFields__c</fullName>
        <label>Content Landing Column Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentLandingRecordTypes__c</fullName>
        <label>Content Landing RecordTypes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentTemplateRecordTypes__c</fullName>
        <label>Content Template RecordTypes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CMS Content Settings</label>
</CustomObject>